--- a/templates/index.html
+++ b/templates/index.html
@@ -39,19 +39,19 @@
     var socket = io();
     socket.on('connect', function() {
       socket.emit('join_room', {username: '{{ username }}', room: '{{ room }}'});
-      
+  
       let message_input = document.getElementById('message_input');
-      document.getElementById('message_input_form').onsubmit = function(e) {
+      document.getElementById('message_input_form').onsubmit = function (e) {
         e.preventDefault();
         let message = message_input.value.trim();
-        if(message.length) {
+        if (message.length) {
           socket.emit('send_message', {
-            username: '{{ username }}',
-            room: '{{ room }}',
+            username: "{{ username }}",
+            room: "{{ room }}",
             message: message
           })
         }
-        message_input.value = "";
+        message_input.value = '';
         message_input.focus();
       }
     });
