--- a/templates/index.html
+++ b/templates/index.html
@@ -37,10 +37,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     var socket = io();
+ 
     socket.on('connect', function() {
-      socket.emit('join_room', {username: '{{ username }}', room: '{{ room }}'});
+      socket.emit('join_room', {
+        username: '{{ username }}', 
+        room: '{{ room }}'
+      });
   
       let message_input = document.getElementById('message_input');
+      
       document.getElementById('message_input_form').onsubmit = function (e) {
         e.preventDefault();
         let message = message_input.value.trim();
@@ -49,13 +54,13 @@
             username: "{{ username }}",
             room: "{{ room }}",
             message: message
-          })
+          });
         }
         message_input.value = '';
         message_input.focus();
       }
     });
-    
+
     socket.on('recieve_message', function (data) {
       const newMode = document.createElement('div');
       newMode.innerHTML = '<b>'+ data.username + ':</b> ' + data.message;
