--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
     socket.on('connect', function() {
       socket.emit('join_room', {
         username: '{{ username }}', 
-        room: '{{ room }}'
+        room: '{{ room._id }}'
       });
   
       let message_input = document.getElementById('message_input');
@@ -52,7 +52,7 @@
         if (message.length) {
           socket.emit('send_message', {
             username: "{{ username }}",
-            room: "{{ room }}",
+            room: "{{ room._id }}",
             message: message
           });
         }
