--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
         <img src="/static/images/960x0.jpeg" alt="pfp" id="profile_picture">
-        
+        <p id="username">Ponmo#9931</p>
+        <p id="settings">#</p>
       </div>
       <div id="spaces">
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
