--- a/templates/index.html
+++ b/templates/index.html
@@ -42,24 +42,24 @@
     socket.on('connect', function() {
       socket.emit('join_room', {
         username: '{{ username }}', 
-        room: '{{ room._id }}'
+        room: '{{ room }}'
       });
   
-      let message_input = document.getElementById('message_input');
+      //let message_input = document.getElementById('message_input');
       
-      document.getElementById('message_input_form').onsubmit = function (e) {
-        e.preventDefault();
-        let message = message_input.value.trim();
-        if (message.length) {
-          socket.emit('send_message', {
-            username: "{{ username }}",
-            room: "{{ room._id }}",
-            message: message
-          });
-        }
-        message_input.value = '';
-        message_input.focus();
-      }
+      //document.getElementById('message_input_form').onsubmit = function (e) {
+      //  e.preventDefault();
+      //  let message = message_input.value.trim();
+      //  if (message.length) {
+      //    socket.emit('send_message', {
+      //      username: "{{ username }}",
+      //      room: "{{ room }}",
+      //      message: message
+      //    });
+      //  }
+      //  message_input.value = '';
+      //  message_input.focus();
+      //}
     });
 
     socket.on('recieve_message', function (data) {
