--- a/templates/index.html
+++ b/templates/index.html
@@ -40,9 +40,9 @@
     var socket = io();
  
     socket.on('connect', function() {
-      socket.emit('join_room', {
-        username: '{{ username }}', 
-        room: '{{ room }}'
+      //socket.emit('join_room', {
+      //  username: '{{ username }}', 
+      //  room: '{{ room }}'
       });
   
       //let message_input = document.getElementById('message_input');
