--- a/templates/index.html
+++ b/templates/index.html
@@ -40,33 +40,33 @@
     var socket = io();
  
     socket.on('connect', function() {
-      //socket.emit('join_room', {
-      //  username: '{{ username }}', 
-      //  room: '{{ room }}'
-      //});
+      socket.emit('join_room', {
+        username: '{{ username }}', 
+        room: '{{ room }}'
+      });
   
-      //let message_input = document.getElementById('message_input');
+      let message_input = document.getElementById('message_input');
       
-      //document.getElementById('message_input_form').onsubmit = function (e) {
-      //  e.preventDefault();
-      //  let message = message_input.value.trim();
-      //  if (message.length) {
-      //    socket.emit('send_message', {
-      //      username: "{{ username }}",
-      //      room: "{{ room }}",
-      //      message: message
-      //    });
-      //  }
-      //  message_input.value = '';
-      //  message_input.focus();
-      //}
+      document.getElementById('message_input_form').onsubmit = function (e) {
+        e.preventDefault();
+        let message = message_input.value.trim();
+        if (message.length) {
+          socket.emit('send_message', {
+            username: "{{ username }}",
+            room: "{{ room }}",
+            message: message
+          });
+        }
+        message_input.value = '';
+        message_input.focus();
+      }
     });
 
-    socket.on('recieve_message', function (data) {
-      const newMode = document.createElement('div');
-      newMode.innerHTML = '<b>'+ data.username + ':</b> ' + data.message;
-      document.getElementById('chat').appendChild(newMode);
-    )};
+    //socket.on('recieve_message', function (data) {
+    //  const newMode = document.createElement('div');
+    //  newMode.innerHTML = '<b>'+ data.username + ':</b> ' + data.message;
+    //  document.getElementById('chat').appendChild(newMode);
+    //)};
     
     socket.on('join_room_announcement', function (data) {
       const newMode = document.createElement('div');
