--- a/templates/index.html
+++ b/templates/index.html
@@ -62,11 +62,11 @@
       }
     });
 
-    //socket.on('recieve_message', function (data) {
-    //  const newMode = document.createElement('div');
-    //  newMode.innerHTML = '<b>'+ data.username + ':</b> ' + data.message;
-    //  document.getElementById('chat').appendChild(newMode);
-    //)};
+    socket.on('recieve_message', function (data) {
+      const newMode = document.createElement('div');
+      newMode.innerHTML = '<b>'+ data.username + ':</b> ' + data.message;
+      document.getElementById('chat').appendChild(newMode);
+    });
     
     socket.on('join_room_announcement', function (data) {
       const newMode = document.createElement('div');
