--- a/static/style.css
+++ b/static/style.css
@@ -24,18 +24,10 @@ img { /* make images and create button undraggable */
   width: 100%;
   height: 50px;
   background-color: white;
-  overflow:hidden;
+  overflow: hidden;
+  background: linear-gradient(225deg, transparent 20px, white 20px);
 }
-#footer:after {
-  content: "";
-  display: block;
-  position: absolute;
-  border: 50px solid transparent;
-  border-bottom: 50px solid black;
-  top: -82px;
-  right: -65px;
-  transform: rotate(45deg);
-}
+
 
 #profile {
   display: inline-block;
