--- a/templates/login.html
+++ b/templates/login.html
@@ -24,10 +24,10 @@
         </a>
       <p id="log-in-footer"> {{ login_error }} </p>
     </div>
-    <div id="like_button_container"></div>
+<!--     <div id="like_button_container"></div>
     <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="{{ url_for('static', filename='like_button.js') }}"></script>
+    <script src="{{ url_for('static', filename='like_button.js') }}"></script> -->
     
   </body>
 </html>
