--- a/templates/index.html
+++ b/templates/index.html
@@ -32,11 +32,11 @@
         <p id="settings">#</p>
       </div>
       <div id="spaces">
-        <img src="/static/images/Space.jpeg" alt="pfp" class="spaces">
-        <img src="/static/images/Space.jpeg" alt="pfp" class="spaces">
-        <img src="/static/images/Space.jpeg" alt="pfp" class="spaces">
-        <img src="/static/images/Space.jpeg" alt="pfp" class="spaces">
-        <img src="/static/images/Space.jpeg" alt="pfp" class="spaces">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
       </div>
   </body>
