--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
-        <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button>
+<!--         <button type="button" id="create"><img src="/static/images/ppicons-plus.svg" alt="create" style="width:25px;height:25px;"></button> -->
       </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
