--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,7 @@
         <p id="settings">#</p>
       </div>
       <div id="spaces">
+        <span id="space_align_helper"></span>
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
