--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,3 @@
-body { 
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-}
 img { /* make images and create button undraggable */
   -webkit-user-drag: none;
   -khtml-user-drag: none;
@@ -34,7 +29,8 @@ img { /* make images and create button undraggable */
   width: 220px;
   height: 50px;
   margin-left: 40px;
-/*   border-radius: 2px; */
+  border-radius: 2px;
+  background-color: pink;
   overflow: hidden;
 }
 #profile_picture {
@@ -77,4 +73,5 @@ img { /* make images and create button undraggable */
   width: 39px;
   height: 39px;
   border-radius: 50%;
+  margin-right: 3px;
 }
