--- a/templates/index.html
+++ b/templates/index.html
@@ -13,12 +13,12 @@
   </head>
   <body>
     <div id="background">
-      <div id="chat"></div>
-        <form id="message_input_form">
-          <input type="text" id="message_input" placeholder="Enter message">
-          <button type="submit">Send</button>
-        </form>
-      </div>
+    </div>
+    <div id="chat">
+      <form id="message_input_form">
+        <input type="text" id="message_input" placeholder="Enter message">
+        <button type="submit">Send</button>
+      </form>
     </div>
     
 <!--     <div id="content">
