--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,9 @@ img { /* make images and create button undraggable */
   user-drag: none;
 } 
 #background { /* Should background extend to full height or not including navbar at bottom? */
-  height: 100vh;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: url(images/temp-background.jpeg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
