--- a/static/style.css
+++ b/static/style.css
@@ -14,6 +14,7 @@ img { /* make images and create button undraggable */
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  z-index: -1;
 }
 #footer {
   position: fixed;
