--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
       </div>
       <div id="spaces">
         <span id="space_align_helper"></span>
-        <img src="/static/images/Space.jpeg" alt="pfp" class="space">
+        <img src="/static/images/Space.jpeg" alt="pfp" class="space" id="first">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
         <img src="/static/images/Space.jpeg" alt="pfp" class="space">
