--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,8 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
+    <div id="home"> 
+    </div>
     <div id="footer">
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
