--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
     <title>Santa Barbara High School</title>
   </head>
   <body>
+    <div id="first-all">
     <div id="background">
     </div>
     <div id="chat">
@@ -19,6 +20,7 @@
         <input type="text" id="message_input" placeholder="Enter message">
         <button type="submit">Send</button>
       </form>
+    </div>
     </div>
     
 <!--     <div id="content">
