--- a/templates/index.html
+++ b/templates/index.html
@@ -24,11 +24,17 @@
           <button type="submit">Send</button>
         </form>
       </div>
+      <div id="header">
+      </div>
+      <div id="information">
+      </div>
+      <div id="channels">
+      </div>
+      <div id="chat">
+      </div>
+      <div id="members">
+      </div>
     </div>
-    
-<!--     <div id="content">
-      <p>Content</p>
-    </div> -->
     <div id="footer">
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
