--- a/templates/index.html
+++ b/templates/index.html
@@ -24,15 +24,19 @@
           <button type="submit">Send</button>
         </form>
       </div>
-      <div id="header">
+      <div id="row_1">
+        <span id="header">
+        </span>
+        <span id="information">
+        </span>
       </div>
-      <div id="information">
-      </div>
-      <div id="channels">
-      </div>
-      <div id="chat">
-      </div>
-      <div id="members">
+      <div id="row_2">
+       <span id="channels">
+       </span>
+       <span id="chat">
+       </span>
+       <span id="members">
+       </span>
       </div>
     </div>
     <div id="footer">
