--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <div id="first-all">
       <div id="background">
       </div>
-      <div id="chat">
+<!--       <div id="chat">
         <div id="messages">
           {{ messaages }}
         </div>
@@ -23,20 +23,18 @@
           <input type="text" id="message_input" placeholder="Enter message">
           <button type="submit">Send</button>
         </form>
-      </div>
-      <div id="row_1">
-        <span id="header">
-        </span>
-        <span id="information">
-        </span>
-      </div>
-      <div id="row_2">
-       <span id="channels">
-       </span>
-       <span id="chat">
-       </span>
-       <span id="members">
-       </span>
+      </div> -->
+      <div id="content">
+        <div id="header">
+        </div>
+        <div id="information">
+        </div>
+        <div id="header">
+        </div>
+        <div id="chats">
+        </div>
+        <div id="members">
+        </div>
       </div>
     </div>
     <div id="footer">
