--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         </div>
         <div id="information">
         </div>
-        <div id="header">
+        <div id="channels">
         </div>
         <div id="chats">
         </div>
