--- a/static/style.css
+++ b/static/style.css
@@ -16,24 +16,39 @@ img { /* make images and create button undraggable */
   background-size: cover;
   z-index: -1;
 }
+#content { /* make calc good on all browsers */
+  display: grid;
+  grid-template-rows: 80px calc(100vh - 130px);
+  grid-template-columns: 280px minmax(0px, auto) 280px;
+  height: 100vh;
+  width: 100vw;
+  gap: 0px;
+  background-color: black;
+}
 #header {
-  width: 280px;
-  height: 80px;
+  grid-column: 1;
+  grid-row: 1;
   background-color: white;
 }
 #information {
-  width: 280px;
-  height: 80px;
-  background-color: white;
+  grid-column: 2 / 4;
+  grid-row: 1;
+  background-color: red;
 }
 #channels {
-  
+  grid-column: 1;
+  grid-row: 2;
+  background-color: blue;
 }
-#chat {
-  
+#chats {
+  grid-column: 2;
+  grid-row: 2;
+  background-color: gray;
 }
 #members {
-  
+  grid-column: 3;
+  grid-row: 2;
+  background-color: pink;
 }
 #footer {
   position: fixed;
