--- a/static/style.css
+++ b/static/style.css
@@ -16,14 +16,14 @@ img { /* make images and create button undraggable */
   background-size: cover;
   z-index: -1;
 }
-#content { /* make calc good on all browsers ; Make margin and padding 0 because of broswer differences ; Make no horizontal scroll at small screen sizes*/
+#content { /* make calc good on all browsers ; Make margin and padding 0 because of broswer differences ; make no horizontal scroll at small screen sizes*/
   display: grid;
-  grid-template-rows: 80px calc(100vh - 130px);
-  grid-template-columns: 280px minmax(0px, auto) 280px;
+  grid-template-rows: 50px calc(100vh - 100px);
+  grid-template-columns: 240px minmax(0px, auto) 240px;
   height: 100vh;
   width: 100vw;
   gap: 0px;
-  background-color: black;
+  background-color: pink;
 }
 #header {
   grid-column: 1;
