--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,6 @@
     <div id="first-all">
       <div id="background">
       </div>
-<!--       <div id="chat">
-        <div id="messages">
-          {{ messaages }}
-        </div>
-        <form id="message_input_form">
-          <input type="text" id="message_input" placeholder="Enter message">
-          <button type="submit">Send</button>
-        </form>
-      </div> -->
       <div id="content">
         <div id="header">
         </div>
@@ -32,6 +23,15 @@
         <div id="channels">
         </div>
         <div id="chats">
+          <div id="chat">
+            <div id="messages">
+              {{ messaages }}
+            </div>
+            <form id="message_input_form">
+              <input type="text" id="message_input" placeholder="Enter message">
+              <button type="submit">Send</button>
+            </form>
+          </div>
         </div>
         <div id="members">
         </div>
