--- a/static/style.css
+++ b/static/style.css
@@ -45,6 +45,27 @@ img { /* make images and create button undraggable */
   grid-row: 2;
   background-color: gray;
 }
+#chat {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background: grey;
+}
+#message_input_form {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: 20px;
+  margin-right: 80px;
+  margin-left: 80px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+#message_input { /* different highlight on click */
+  height: 38px; 
+  width: 660px;
+  float: left;
+}
 #members {
   grid-column: 3;
   grid-row: 2;
