--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <form id="message_input_form">
               <input type="text" id="message_input" placeholder="Enter message">
-              <button type="submit" id="submit">Send</button>
+              <input type="submit" id="submit" src="/static/images/send.png"></input>
             </form>
           </div>
         </div>
