--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
             </div>
             <form id="message_input_form">
               <input type="text" id="message_input" placeholder="Enter message">
-              <button type="submit" id="submit"><img id="send" "src="/static/images/send.png" alt="Send"></button>
+              <button type="submit" id="submit"><img id="send" src="/static/images/send.png" alt="Send"></button>
             </form>
           </div>
         </div>
