--- a/static/style.css
+++ b/static/style.css
@@ -60,11 +60,26 @@ img { /* make images and create button undraggable */
   height: 40px;
   border-radius: 4px;
   border: 1px solid black;
+  background: white;
 }
 #message_input { /* different highlight on click */
   height: 38px; 
-  width: 660px;
+  width: calc(100% - 38px);
   float: left;
+  background: transparent;
+  border: none;
+}
+#submit {
+  float: right;
+  width: 38px;
+  height: 38px;
+  background-color: transparent;
+  border: none;
+}
+#send {
+  margin-right: 10px;
+  width: 26px;
+  height: 25px;
 }
 #members {
   grid-column: 3;
