--- a/templates/index.html
+++ b/templates/index.html
@@ -93,5 +93,23 @@
       newMode.innerHTML = data.username + ' has joined';
       document.getElementById('messages').appendChild(newMode);
     });
+    
+    socket.on('load_chat_history', function() {
+      $.ajax({
+        type: "POST",
+        url: '/chat_history',
+        contentType: 'application/json;charset=UTF-8',
+        success: function(chat_history) {
+          chat_history.forEach(function(item) {
+            const newMode = document.createElement('div');
+            newMode.className = 'message';
+            newMode.innerHTML = '<b>' + item.name + ':</b> ' + item.message + item.picture + item.datetime;
+            document.getElementById('messages').appendChild(newMode);
+          });
+          //alert(JSON.stringify(chat_history));
+        } 
+      });
+    });
+    
   </script>
 </html>
