--- a/templates/index.html
+++ b/templates/index.html
@@ -101,7 +101,8 @@
         chat_history.forEach(function(item) {
           const newMode = document.createElement('div');
           newMode.className = 'message';
-          newMode.innerHTML = '<b>' + item.name + ':</b> ' + item.message + item.picture + item.datetime;
+          // Give pfp image default fallback image
+          newMode.innerHTML = '<b>' + item.name + ':</b> ' + item.message + '<img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
           document.getElementById('messages').appendChild(newMode);
         });
         //alert(JSON.stringify(chat_history));
