--- a/static/style.css
+++ b/static/style.css
@@ -63,6 +63,17 @@ img { /* make images and create button undraggable */
   border-radius: 4px;
   background: white;
 } */
+.message {
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-left: 20px;
+  font-size: 13px;
+}
+.pfp {
+  width: 39px;
+  height: 39px;
+  border-radius: 50%;
+}
 #message_input_form {
   position: sticky;
   position: -webkit-sticky;
