--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,7 @@
         </div>
         <div id="channels">
         </div>
+<!--         when new message is sent, make the new message appear above the message bar and not mess up the scrolling (Safari only). -->
         <div id="chats">
           <div id="chat">
             <form id="message_input_form">
@@ -100,9 +101,9 @@
       success: function(chat_history) {
         chat_history.forEach(function(item) {
           const newMode = document.createElement('div');
-          newMode.className = 'message';
+          newMode.className = 'message-container';
           // Give pfp image default fallback image
-          newMode.innerHTML = '<b>' + item.name + ':</b> ' + item.message + '<img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
+          newMode.innerHTML = '<p class="name"> <b>' + item.name + '</b> </p> <p class="message">' + item.message + '</p><img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
           document.getElementById('messages').appendChild(newMode);
         });
         //alert(JSON.stringify(chat_history));
