--- a/templates/index.html
+++ b/templates/index.html
@@ -103,7 +103,9 @@
           const newMode = document.createElement('div');
           newMode.className = 'message-container';
           // Give pfp image default fallback image
-          newMode.innerHTML = '<p class="name"> <b>' + item.name + '</b> </p> <p class="message">' + item.message + '</p><img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
+          newMode.innerHTML = '<img class="pfp" src="' + item.picture + '" alt="!"> <p class="message-title"> <span class="name"> <b>' + item.name + ' </b> </span> <span class="datetime">' + item.datetime + '</span> </p> <p class="message">' + item.message + '</p>';
+          
+//           newMode.innerHTML = '<p class="name"> <b>' + item.name + '</b> </p> <p class="message">' + item.message + '</p><img class="pfp" src="' + item.picture + '" alt="!">' + item.datetime;
           document.getElementById('messages').appendChild(newMode);
         });
         //alert(JSON.stringify(chat_history));
