--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,8 @@
     <div id="footer">
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
-        <img src="/static/images/960x0.jpeg" alt="pfp" id="profile_picture">
-        <p id="username">Ponmo#9931</p>
+        <img src={{ image }} alt="pfp" id="profile_picture">
+        <p id="username">{{ username }}</p>
         <p id="settings">#</p>
       </div>
       <div id="spaces">
