--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
           socket.emit('send_message', {
             username: "{{ username }}",
             room: "{{ room }}",
-            picture: "{{ profile_picture }}"
+            picture: "{{ profile_picture }}",
             message: message
           });
         }
