--- a/static/style.css
+++ b/static/style.css
@@ -65,6 +65,9 @@ img { /* make images and create button undraggable */
   background: white;
 } */
 .message-container {
+  display: grid;
+  grid-template-rows: 28px auto;
+  grid-template-columns: 10px auto;
   padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px;
@@ -72,16 +75,23 @@ img { /* make images and create button undraggable */
 }
 .message-title {
   margin-left: 50px;
+  grid-column: 2;
+  grid-row: 1;
 }
 .message {
   margin-left: 50px;
   white-space: initial;
   word-break: break-all;
+  grid-column: 2;
+  grid-row: 2;
 }
 .pfp {
+  margin-top: -1px;
   width: 39px;
   height: 39px;
   border-radius: 50%;
+  grid-column: 1;
+  grid-row: 1 / 3;
 }
 #message_input_form {
   position: sticky;
@@ -94,7 +104,6 @@ img { /* make images and create button undraggable */
 }
 #message_input { /* make textbox (textarea?) expandable for chunked messages; different highlight on click */
   height: 38px; 
-  white-space: initial;
   width: calc(100% - 38px);
   float: left;
   background: transparent;
