--- a/static/style.css
+++ b/static/style.css
@@ -66,7 +66,7 @@ img { /* make images and create button undraggable */
 } */
 .message-container {
   display: grid;
-  grid-template-rows: 21px auto;
+  grid-template-rows: auto auto;
   grid-template-columns: 8px auto;
   padding-top: 10px;
   padding-right: 20px;
@@ -78,8 +78,11 @@ img { /* make images and create button undraggable */
 }
 .message-title {
   margin-left: 50px;
+  white-space: initial;
+  word-break: break-all;
   grid-column: 2;
   grid-row: 1;
+  margin-bottom: 0px;
 }
 .message {
   margin-left: 50px;
