--- a/static/style.css
+++ b/static/style.css
@@ -80,6 +80,7 @@ img { /* make images and create button undraggable */
   margin-left: 50px;
   white-space: initial;
   word-break: break-all;
+  overflow: hidden;
   grid-column: 2;
   grid-row: 1;
   margin-bottom: 1px;
@@ -88,12 +89,13 @@ img { /* make images and create button undraggable */
   margin-left: 50px;
   white-space: initial;
   word-break: break-all;
+  overflow: hidden;
   grid-column: 2;
   grid-row: 2;
 }
 .pfp {
-  width: 40px;
-  height: 40px;
+  width: 39px;
+  height: 39px;
   border-radius: 50%;
   grid-column: 1;
   grid-row: 1 / 3;
@@ -199,13 +201,10 @@ img { /* make images and create button undraggable */
   border-radius: 10%;
   margin-right: 3px;
 }
-
-
 ::-webkit-scrollbar {
   width: 8px;
 
 }
-
 ::-webkit-scrollbar-track {
   background-color: darkgray;
   border-radius: 10px;
@@ -214,7 +213,6 @@ img { /* make images and create button undraggable */
   
   
 }
-
 ::-webkit-scrollbar-thumb {
   background-color: black;
   border-radius: 10px;
