--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
     <div id="footer">
       <div id="profile">
         <!-- load exclamation mark icon if not showing -->
-        <img src={{ profile_picture }} alt="pfp" id="profile_picture">
+        <img src={{ picture }} alt="pfp" id="profile_picture">
         <p id="username">{{ name }}</p>
         <p id="settings">#</p>
       </div>
