--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,10 @@
         <div id="header">
         </div>
         <div id="information">
+          <form id="message_input_form">
+              <input type="text" id="message_input" placeholder="TEMPORARY TEST UNTIL NOAH FIXES THIS!!!!">
+              <button type="submit" id="submit"><img id="send" src="/static/images/send.png" alt="Send"></button>
+          </form>
         </div>
         <div id="channels">
         </div>
@@ -56,6 +60,7 @@
       </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
   <script type="text/javascript" charset="utf-8">
     var socket = io();
  
@@ -102,6 +107,8 @@
       url: '/chat_history',
       contentType: 'application/json;charset=UTF-8',
       success: function(chat_history) {
+        var nowMoment = moment();
+        nowMoment.isoformat();
         var now = new Date();
         var day = String(now.getDate()).padStart(2, '0');
         var month = String(now.getMonth() + 1).padStart(2, '0'); //January is 0!
