--- a/static/style.css
+++ b/static/style.css
@@ -40,13 +40,15 @@ img { /* make images and create button undraggable */
   background-color: blue;
 }
 #chats {
+  display: flex;
+  flex-direction: column;
   grid-column: 2;
   grid-row: 2;
   background-color: gray;
   
 }
 #chat {
-  height: 100%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   background: grey;
@@ -101,8 +103,7 @@ img { /* make images and create button undraggable */
   grid-row: 1 / 3;
 }
 #message_input_form {
-  position: sticky;
-  position: -webkit-sticky;
+  margin-bottom: 20px;
   margin-right: 15px;
   margin-left: 15px;
   bottom: 20px;
@@ -209,7 +210,7 @@ img { /* make images and create button undraggable */
   background-color: darkgray;
   border-radius: 10px;
   margin-top: 4px;
-  margin-bottom: 45px;
+  margin-bottom: 8px;
   
   
 }
