--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
           </div>
           <form id="message_input_form">
             <!--see w3schools input attributes like max char, spam, etc. -->
-            <textarea id="message-input" placeholder="Enter message"></textarea>
+            <textarea id="message_input" placeholder="Enter message"></textarea>
 <!--             <input type="text" id="message_input" placeholder="Enter message"> -->
               <button type="submit" id="submit"><img id="send" src="/static/images/send.png" alt="Send"></button>
           </form>
