--- a/static/style.css
+++ b/static/style.css
@@ -94,6 +94,7 @@ img { /* make images and create button undraggable */
   overflow: hidden;
   grid-column: 2;
   grid-row: 2;
+  white-space: pre-wrap;
 }
 .pfp {
   width: 39px;
