--- a/templates/index.html
+++ b/templates/index.html
@@ -113,23 +113,23 @@
           var messageMoment = moment(item.datetime).local();
           var timeDifference = nowMoment.diff(moment(item.datetime), 'days');
           if (timeDisplayMode == 0) {
-            if (timeDifference <= 1) {
-              messageMoment = ' at ' + messageMoment.format('h:mm A')
+            if (timeDifference >= 2) {
+              messageMoment = messageMoment.format('M/D/YYYY')
             }
-            else if (timeDifference <= 2) {
+            else if (timeDifference >= 1) {
               timeDisplayMode = 1;
               messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday'
             }
             else {
               timeDisplayMode = 2;
-              messageMoment = messageMoment.format('M/D/YYYY')
+              messageMoment = ' at ' + messageMoment.format('h:mm A')
             }
           }
           else if (timeDisplayMode == 1) {
             messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday'
           }
           else {
-            messageMoment = messageMoment.format('M/D/YYYY')
+            messageMoment = ' at ' + messageMoment.format('h:mm A')
           }
           const newMode = document.createElement('div');
           newMode.className = 'message-container';
