--- a/templates/index.html
+++ b/templates/index.html
@@ -114,22 +114,27 @@
           var timeDifference = nowMoment.diff(moment(item.datetime), 'days');
           if (timeDisplayMode == 0) {
             if (timeDifference >= 2) {
-              messageMoment = messageMoment.format('M/D/YYYY')
+              messageMoment = messageMoment.format('M/D/YYYY');
             }
             else if (timeDifference >= 1) {
               timeDisplayMode = 1;
-              messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday'
+              messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday'; //Absolutely horrible method, please rewrite later thank you!
             }
             else {
               timeDisplayMode = 2;
-              messageMoment = ' at ' + messageMoment.format('h:mm A')
+              messageMoment = ' at ' + messageMoment.format('h:mm A');
             }
           }
           else if (timeDisplayMode == 1) {
-            messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday'
+            if (timeDifference >= 1) {
+              messageMoment = 'at ' + messageMoment.format('h:mm A') + ' yesterday';
+            }
+            else {
+              messageMoment = ' at ' + messageMoment.format('h:mm A');
+            }
           }
           else {
-            messageMoment = ' at ' + messageMoment.format('h:mm A')
+            messageMoment = ' at ' + messageMoment.format('h:mm A');
           }
           const newMode = document.createElement('div');
           newMode.className = 'message-container';
